# opengl

./: .gitmodules  CMakeLists.txt  main.c  shader.vert
asteroids/: asteroids_shader.vert  camera.h  main.c  mesh.h  model.h  shader.frag
getting_started/: main.c  shader.vert
glad/include/glad/: glad.h
glad/src/: glad.c
lighting/: lighting.frag  main.c
model_loading/: light_cube_vertices.h  main.c  mesh.h  model.h  shader.frag  shader.h  shader.vert
tetris/: camera.h  main.c  pieces.h  shader.h
